Fix XDCR status badge
- badge got easily cut off if the screen was narrowed
- made columns more equal width

Reviewed-on: http://review.couchbase.org/116394
Tested-by: Rob Ashcom <rob.ashcom@gmail.com>

--- a/priv/public/ui/app/css/cbui-components.css
+++ b/priv/public/ui/app/css/cbui-components.css
@@ -906,7 +906,7 @@ section.error {
   background-color: #f5a623;
   color: #fff;
   left: -1px;
-  top: -4px;
+  top: -3px;
   padding: .275rem;
 }
 .badge.notify {
